JAM:update note

jam1.9092 2022/3/23
new option mstc(131)=2 is added

jam1.9091 2022/3/22
bug fix: there was a bug in which code stops without any error message.
new option for nuclear cluster formation mstc(131)=2

jam1.9090 2022/3/7
bug fix:
jamfrg error for attrad
jamhard
jamcluster wrong particle code for nucleus

jam1.90810 2022/2/13
nuclear cluster formation added: subr. jamcluster
relevant switches:
mstc(131)=1  ! cluster on
mstc(132)=1  ! delete dead particle
parc(131)=4.0fm     ! min. distance
parc(132)=0.3GeV/c  ! min. relative momentum
k(2,i)=\pm 10SZZZAAAI  : PDG nuclear code
k(3,i)=number of Lambda
k(4,i)=number of Sigma
k(5,i)=number of Xi
k(6,i)=number of Omega


jam1.90800 2022/2/12
bug fix introduced in jam1.90589 when mstc(128)=1
Do not use jam version 1.90589-1.90702

jam1.90701 2022/1/21
Bug fix in the manual jam.tex mstc(106)=204-212

jam1.90700 2021/10/5
jamboost modified such that nucleus z-separation is always the same to compute
event-averaged density.

jam1.90600 2021/8/3
added new EoS parameter set for RQMDs and RQMDv mode.

jam1.90598 2021/5/12
bug fix in jamrqmd4.f (RQMDv mode)

jam1.90597 2021/1/15
lepton decays from hadronic resonance are included.

jam1.90595 2020/10/31
bug fix: mstc(125) still had a bug....

jam1.90595 2020/10/23
bug fix:
new switch mstc(125) to change the strength of potential for strangeness
baryons by 'parc(108) and parc(109)'.

jam1.90594 2020/10/17
new switch mstc(125) to change the strength of potential for strangeness
baryons by parc(107) and parc(108).

jam1.905786 2020/1/26
RQMD.RMF with momentum-dependent potential added more mstc(106)=207-210
mstc(128) and parc(128) are introduced for the option that
pre-hadron scattering is forced to be a diffractive scattering
which affect the stopping power of baryons as well as the multiplicity
of produced hadrons.

jam1.905785 2020/1/12
RQMD.RMF with momentum-dependent potential added more mstc(106)=200-206