@@ -107,7 +107,7 @@ c..     1     2      3      4     5     6       7     8     9   10
      1 10*0.d0,
      2    0.d0,   0.d0,   0.d0,   0.d0,   0.d0,   10.d0, 0.5d0,  0.4d0, 
      &    0.d0,   0.d0, 
-     3    4.d0,   0.3d0,  0.d0,   0.d0,   0.d0,   0.d0,   0.d0,   0.d0, 
+     3    4.d0,   0.3d0,  -7.d0,  0.d0,   0.d0,   0.d0,   0.d0,   0.d0, 
      &    0.d0,   0.5d0, 
      4    0.d0,   0.5d0,  1.d0,  0.5d0,  0.39693d0, -1.d0, 2.d0,  0.d0, 
      &    0.d0,   0.d0, 
